Revision history for Perl extension WebService::Solr.

0.21 2012-11-29
 - Get rid of use_ok() in the tests.
 - Minor documentation fixes.

0.20 2012-11-29
 - Avoid random hash key ordering issues (perl 5.17.6) when testing
   WebService::Solr::Query (RT #81527)

0.19 2012-05-25
 - Merge default_params in with other params in the post body

0.18 2012-05-24
 - Force previous switch to a post request to be utf-8 encoded

0.17 2012-03-29
 - Changed the solr search to use a post request (Robert Ward)

0.16 2011-10-11
 - Switch to Any::Moose so that Mouse may be used (Kevin Goess)

0.15 2011-07-14
 - Add a last_response accessor to get the most recent 
   WebService::Solr::Response object (Dan Brook)

0.14 2011-06-13
 - Fix broken logic for figuring out rows per page when not explicitly
   specified. It was broken on the last page when the number of rows
   returned was less than the default. We now just assume 10 rows which
   is the default in Solr.

0.13 2011-05-05
 - Replace XML::Generator with XML::Easy and de-mooseify the Document and
   Field classes to help speed up (about 3x) document creation and
   serialization.

0.12 2011-04-12
 - Clean up docs in relation to autocommit
 - Handle blessed field values (Dan Brook)

0.11 2010-10-27
 - Add a note about enabling Keep-Alive connections (Stijn Prompers)
 - Add field_names method to Document (Cory Watson, Craig Hall)

0.10 2010-03-17
 - Add spellcheck() convenience method to Response object
 - Fix exception when response contained no documents

0.09 2009-12-04
 - Return undef in pager/pageset special case when we explicitly return 0
   rows
 - Add rollback() from Solr 1.4
 - Add generic delete() from Solr 1.4
 - Update docs to match Solr 1.4 options
 - Fix ping() to check only the HTTP status

0.08 2009-10-14
 - Allow scalar ref value in WebService::Solr::Query, which works like
   SQL::Abstract (literal query)
 - Fix status_message and status_code in Response